--- a/this-class.html
+++ b/this-class.html
@@ -10,32 +10,43 @@ To change this template use Tools | Templates.
 </head>
 
 <body id="bodythisclass">
-    <ul>
-        <li id="welcome-page"><a class="hrefs" href="index.html">Welcome Page</a>
-        </li>
+    <div>
+        <ul>
 
-        <li id="this-class"><a class="hrefs" href="aboutme.html">About Me</a>
-        </li>
+            <li id="welcome-page"><a class="hrefs" href="index.html">Welcome Page</a></li>
+            <li id="this-class"><a class="hrefs" href="aboutme.html">About Me</a></li>
+            <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
+            <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
+            <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
 
-        <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a>
-        </li>
+            <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
+            <ul class="dropdown" id="main">
+                <li><a href="info.html">Popular Music Artists</a></li>
+                <li><a href="calc.html">Calculator</a></li>
+                <li><a href="todolist.html">To Do List</a></li>
+            </ul>
 
-        <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a>
-        </li>
+        </ul>
 
-        <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a>
-        </li>
-
-        <img id="flower-pic" src="http://41.media.tumblr.com/tumblr_m8lt5o2h011rdbpi2o1_500.png">
+    </div>
     </ul>
+
+    </div>
+
+    <img id="flower-pic" src="http://41.media.tumblr.com/tumblr_m8lt5o2h011rdbpi2o1_500.png">
+
 
     <p class="this">This Class</p>
 
 
     <div class="text-box">
 
-        <p class="pp2">Welcome to my Intro to Computer Science webpage! Intro to Computer Science is all about understanding the basics of computers and getting a little more in depth about how they work. Since computers are a part of our everyday life, it is important for us to learn how they can be used and how we can use them creatively and to our advantage.
-            <strong>So far,</strong> we have learned the very basics of HTML and CSS coding, which can be explained in another section above. Also in the tabs above, you can learn more about me and Computer Hardware. My classmates and I are very excited to be able to take this course and leave it with a better knowledge of Computer Science. We have been using the sites Codio and Git (so far) in order to be able to make web pages like this one. <strong>At first,</strong> when I saw Computer Science as one of our elective options, I was hesitant to choose it, because Computer Science seems really confusing and frustrating just by the description of it. But after giving it a try, I have realized that I actually really enjoy Computer Science and making stuff on my own.
+        <p class="pp2">Welcome to my Intro to Computer Science webpage! Intro to Computer Science is all about understanding the basics of computers and getting a little more in depth about how they work. Since computers are a part of our everyday life, it is important
+            for us to learn how they can be used and how we can use them creatively and to our advantage.
+            <strong>So far,</strong> we have learned the very basics of HTML and CSS coding, which can be explained in another section above. Also in the tabs above, you can learn more about me and Computer Hardware. My classmates and I are very excited
+            to be able to take this course and leave it with a better knowledge of Computer Science. We have been using the sites Codio and Git (so far) in order to be able to make web pages like this one. <strong>At first,</strong> when I saw Computer
+            Science as one of our elective options, I was hesitant to choose it, because Computer Science seems really confusing and frustrating just by the description of it. But after giving it a try, I have realized that I actually really enjoy Computer
+            Science and making stuff on my own.
         </p>
 
         <img id="boutut" src="e8QCt.png">
