--- a/1st Website/aboutme.html
+++ b/1st Website/aboutme.html
@@ -24,6 +24,8 @@ To change this template use Tools | Templates.
                 <li><a href="info.html">Popular Music Artists</a></li>
                 <li><a href="calc.html">Calculator</a></li>
                 <li><a href="todolist.html">To Do List</a></li>
+                <li><a href = "planner.html"> Planner </a></li>
+                <li><a href = "contentTracker.html"> Content Tracker</a></li>
             </ul>
 
         </ul>
