--- a/1st Website/contentTracker.html
+++ b/1st Website/contentTracker.html
@@ -87,17 +87,33 @@
         position: relative;
         top:20px;
     }
+    
 </style>
 
 <body class="body" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4hmSddns9L7IdXTn8DloSkSo8QQ-1qSniMr700LLdfoWtZ-pk');">
     <div class="navbar">
+        <div>
         <ul>
 
-            <li id="plannerNavbar"><a class="hrefs" href="planner.html">Planner</a></li>
-            <li id="cas"><a class="hrefs" href="">Content Assessment Tracker</a></li>
-        </ul>
+            <li id="welcome-page"><a class="hrefs" href="index.html">Welcome Page</a></li>
+            <li id="this-class"><a class="hrefs" href="aboutme.html">About Me</a></li>
+            <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
+            <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
+            <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
+
+            <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
+            <ul class="dropdown" id="main">
+                <li><a href="info.html">Popular Music Artists</a></li>
+                <li><a href="calc.html">Calculator</a></li>
+                <li><a href="todolist.html">To Do List</a></li>
+                <li><a href = "planner.html"> Planner </a></li>
+                <li><a href = "contentTracker.html"> Content Tracker</a></li>
+                
+            </ul>
 
         </ul>
+
+    </div>
 
     </div>
     </ul>
