--- a/1st Website/todolist.html
+++ b/1st Website/todolist.html
@@ -21,6 +21,8 @@
         <li><a href="info.html">Popular Music Artists</a></li>
         <li><a href="calc.html">Calculator</a></li>
         <li><a href="todolist.html">To Do List</a></li>
+        <li><a href = "planner.html"> Planner </a></li>
+        <li><a href = "contentTracker.html"> Content Tracker</a></li>
       </ul>
 
     </ul>
