--- a/1st Website/Computer-Hardware.html
+++ b/1st Website/Computer-Hardware.html
@@ -18,14 +18,16 @@ To change this template use Tools | Templates.
             <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
             <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
             <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
+            <li id="c-hardware"><a class="hrefs" href="vindWebsite.html"> Vindinium</a></li>
+            <li id="c-hardware"><a class="hrefs" href="game.html"> Game</a></li>
 
             <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
             <ul class="dropdown" id="main">
                 <li><a href="info.html">Popular Music Artists</a></li>
                 <li><a href="calc.html">Calculator</a></li>
                 <li><a href="todolist.html">To Do List</a></li>
-                <li><a href = "planner.html"> Planner </a></li>
-                <li><a href = "contentTracker.html"> Content Tracker</a></li>
+                <li><a href="planner.html"> Planner </a></li>
+                <li><a href="contentTracker.html"> Content Tracker</a></li>
             </ul>
 
         </ul>
@@ -35,7 +37,7 @@ To change this template use Tools | Templates.
 
     </div>
 
-    <img class="palmtree" src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/black-ink-grunge-stamps-textures-icons-natural-wonders/049603-black-ink-grunge-stamp-textures-icon-natural-wonders-tree-palm3.png">
+    <img class="palmtree" src="palms.png">
 
     <h1 class="h1n1">Computer Hardware</h1>
     <p id="hover">Hover over the pictures below in order to learn more about them.</p>
@@ -49,7 +51,7 @@ To change this template use Tools | Templates.
 
         <div class="flip-cards" id="motherboardflip">
             <div class="front-card">
-                <img class="front-card" src="http://www.epartzdirect.com/v000108790-1.jpg">
+                <img class="front-card" src="motherboard2.jpg">
             </div>
             <div class="reverse-card" id="card1">
                 <p class="ppp">This is the motherboard. A motherboard is a circuit board that carries the basic components of the computer and can be linked to other parts of the computer in order for it to run. The motherboard is like the headquarters of the computer.
