--- a/1st Website/html-css.html
+++ b/1st Website/html-css.html
@@ -18,14 +18,16 @@ To change this template use Tools | Templates.
             <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
             <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
             <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
+            <li id="c-hardware"><a class="hrefs" href="vindWebsite.html"> Vindinium</a></li>
+            <li id="c-hardware"><a class="hrefs" href="game.html"> Game</a></li>
 
             <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
             <ul class="dropdown" id="main">
                 <li><a href="info.html">Popular Music Artists</a></li>
                 <li><a href="calc.html">Calculator</a></li>
                 <li><a href="todolist.html">To Do List</a></li>
-                <li><a href = "planner.html"> Planner </a></li>
-                <li><a href = "contentTracker.html"> Content Tracker</a></li>
+                <li><a href="planner.html"> Planner </a></li>
+                <li><a href="contentTracker.html"> Content Tracker</a></li>
             </ul>
 
         </ul>
@@ -37,7 +39,7 @@ To change this template use Tools | Templates.
 
     <div class="pic-and-header">
 
-        <img id="city" src="http://41.media.tumblr.com/1a880e18406406cf0f71333f08c41bee/tumblr_n322c58gkD1s6294bo1_500.png">
+        <img id="city" src="flowerCircle.png">
 
         <p id="headinghtml">HTML
             <br>&CSS</p>
@@ -62,6 +64,7 @@ To change this template use Tools | Templates.
                 start with an html tag at the beginning and the end of the HTML document. Inside of those tags, you include other tags that you want to be the content within your page. HTML was created by a man named Tim Berners-Lee (pictured below).
                 HTML is a fairly new concept. It was introduced along with the World Wide Web because HTML was the World Wide Web's publishing language. HTML and the World Wide Web came about at CERN, a meeting place for physicists all over the world
                 where highly intellegent and creative groups of thinkers engage in discussions of many complex ideas. Tim Berners-Lee was working on a computer services section of CERN when he came up with the idea for the Web.
+                <br>
                 <br>
                 <img alt="tim berners-lee" class="tim" src="http://www.sciencemuseum.org.uk/~/media/ScM/explore_our_collection/information_age/web/Tim%20Berners%20Lee%20960%20x%20585.jpg">
                 <img alt="WWW symbol" class="tim" src="http://thumbs.dreamstime.com/x/world-wide-web-internet-concept-21962706.jpg">
@@ -107,6 +110,8 @@ To change this template use Tools | Templates.
             <td class="woahthere">Attributes are used in HTML in order to provide extra information about the HTML element that you want to add something to. For example, you can use the "href" tag in order to add a link to one of the elements on your HTML document. Attributes
                 are always found in the start tag and use quotation marks to specify what you want to change. Other attributes can be "height", "width", and "alt" in order to change your picture or have a backup text in case your picture doesn't show
                 up on a certain browser.
+                <br>
+                <br>
                 <img alt="This is a picture showing where the tags, attributes and values are found" class="tim" src="http://4.bp.blogspot.com/_A8ddo0sljwY/TN6a5KHhvPI/AAAAAAAAAoM/7IKwR5Hbj6k/s1600/attribute.png">
             </td>
 
