--- a/1st Website/info.html
+++ b/1st Website/info.html
@@ -15,13 +15,16 @@
             <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
             <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
             <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
+            <li id="c-hardware"><a class="hrefs" href="vindWebsite.html"> Vindinium</a></li>
+            <li id="c-hardware"><a class="hrefs" href="game.html"> Game</a></li>
 
             <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
             <ul class="dropdown" id="main">
                 <li><a href="info.html">Popular Music Artists</a></li>
                 <li><a href="calc.html">Calculator</a></li>
                 <li><a href="todolist.html">To Do List</a></li>
-                
+                <li><a href="planner.html"> Planner </a></li>
+                <li><a href="contentTracker.html"> Content Tracker</a></li>
             </ul>
 
         </ul>
@@ -31,24 +34,28 @@
 
     </div>
 
-    <div id="title" style="font-size:80px">
+    <div id="title" style="font-size:60px">
         <center>Popular Music Artists</center>
     </div>
+
+    <center>
+        <p>Click on the picture of the artist that you want to learn more about!</p>
+    </center>
 
     <div id="item1" class="pics band">
         <img src="http://d.ibtimes.co.uk/en/full/1460191/one-direction-album.jpg?w=736" alt="One Direction" style="width:300px">
     </div>
 
     <div id="item2" class="pics">
-        <img src="http://www.hercampus.com/sites/default/files/2014/11/02/adele.jpg" alt="Adele" style="width:350px">
+        <img src="http://www.hercampus.com/sites/default/files/2014/11/02/adele.jpg" alt="Adele" style="width:350px" hspace="155">
     </div>
     <div id="item3" class="pics">
-        <img src="http://www.mtv.com/crop-images/2013/09/27/Ed%20Sheeran%20-%20Dan%20Curwin.jpg" alt="Ed Sheeran" style="width:350px">
+        <img src="http://www.mtv.com/crop-images/2013/09/27/Ed%20Sheeran%20-%20Dan%20Curwin.jpg" alt="Ed Sheeran" style="width:350px" hspace="330">
 
     </div>
 
     <div id="item4" class="pics band">
-        <img src="http://www.eventim.co.uk/obj/media/UK-eventim/galery/kuenstler/l/little-mix-hammersmith-apollo-3.jpg" alt="Little Mix" style="width:300px">
+        <img src="http://www.eventim.co.uk/obj/media/UK-eventim/galery/kuenstler/l/little-mix-hammersmith-apollo-3.jpg" alt="Little Mix" style="width:300px" hspace="530">
 
     </div>
 
