--- a/1st Website/this-class.html
+++ b/1st Website/this-class.html
@@ -18,15 +18,17 @@ To change this template use Tools | Templates.
             <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
             <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
             <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
+            <li id="c-hardware"><a class="hrefs" href="vindWebsite.html"> Vindinium</a></li>
+            <li id="c-hardware"><a class="hrefs" href="game.html"> Game</a></li>
 
             <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
             <ul class="dropdown" id="main">
                 <li><a href="info.html">Popular Music Artists</a></li>
                 <li><a href="calc.html">Calculator</a></li>
                 <li><a href="todolist.html">To Do List</a></li>
-                <li><a href = "planner.html"> Planner </a></li>
-                <li><a href = "contentTracker.html"> Content Tracker</a></li>
-                
+                <li><a href="planner.html"> Planner </a></li>
+                <li><a href="contentTracker.html"> Content Tracker</a></li>
+
             </ul>
 
         </ul>
@@ -36,7 +38,7 @@ To change this template use Tools | Templates.
 
     </div>
 
-    <img id="flower-pic" src="http://41.media.tumblr.com/tumblr_m8lt5o2h011rdbpi2o1_500.png">
+    <img id="flower-pic" src="flowers.png">
 
 
     <p class="this">This Class</p>
