--- a/1st Website/calc.html
+++ b/1st Website/calc.html
@@ -16,14 +16,16 @@
             <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
             <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
             <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
+            <li id="c-hardware"><a class="hrefs" href="vindWebsite.html"> Vindinium</a></li>
+            <li id="c-hardware"><a class="hrefs" href="game.html"> Game</a></li>
 
             <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
             <ul class="dropdown" id="main">
                 <li><a href="info.html">Popular Music Artists</a></li>
                 <li><a href="calc.html">Calculator</a></li>
                 <li><a href="todolist.html">To Do List</a></li>
-                <li><a href = "planner.html"> Planner </a></li>
-                <li><a href = "contentTracker.html"> Content Tracker</a></li>
+                <li><a href="planner.html"> Planner </a></li>
+                <li><a href="contentTracker.html"> Content Tracker</a></li>
             </ul>
 
         </ul>
@@ -32,23 +34,31 @@
     </ul>
 
     </div>
-    <h1>Calculator</h1>
-    <div class="text" id="body">
-        <input class="inputs" type="text" name="input1" style="width:50px;" id="input1">
-        <select id="dropdown">
-            <option value="+">+</option>
-            <option value="-">-</option>
-            <option value="x">x</option>
-            <option value="/">/</option>
-            <option value="^">^</option>
-        </select>
-        <input class="inputs" type="text" name="input2" style="width:50px;" id="input2">
-        <input type="button" value="Calculate" id="submitButton" />
+    <div id="body2">
+        <p id="h1">Calculator</p>
+        <center>
+            <p>Input the numbers you want to use and select the operation you would like to apply from the dropdown menu.
+                <br> To get your answer, press the calculate button!</p>
+        </center>
 
-        <p>The answer is: <span id="display"></span></p>
-        <script src="calc.js"></script>
-    </div>
+        <div class="text" id="body">
+            <input class="inputs" type="text" name="input1" style="width:50px;" id="input1">
+            <select id="dropdown">
+                <option value="+">+</option>
+                <option value="-">-</option>
+                <option value="x">x</option>
+                <option value="/">/</option>
+                <option value="^">^</option>
+            </select>
+            <input class="inputs" type="text" name="input2" style="width:50px;" id="input2">
+            <input type="button" value="Calculate" id="submitButton" />
+
+            <p>The answer is: <span id="display"></span></p>
+            <script src="calc.js"></script>
+        </div>
 
 </body>
+
+</div>
 
 </html>
