--- a/1st Website/planner.html
+++ b/1st Website/planner.html
@@ -11,10 +11,9 @@
   
   .title {
     text-align: left;
-    color: rgb(0, 51, 153);
-    font-size:45px;
-    position:relative;
-    top:20px;
+    font-size: 45px;
+    position: relative;
+    top: 20px;
   }
   
   #myform {
@@ -58,96 +57,216 @@
   }
   
   .moveit {
-    text-align:center;
-    top:120px;
-    display:inline;
+    text-align: center;
+    top: 120px;
+    display: inline;
   }
   
-  .sections{
-   display:inline-block; 
-   max-width:20%;
-   border:1.5px solid black;
-   padding-left:5%;
-   padding-right:5%;
-   text-align:center;
-   margin:10px;
+  .sections {
+    display: inline-block;
+    max-width: 20%;
+    border: 1.5px solid black;
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: center;
+    margin: 10px;
   }
   
-  .headings{
-  text-decoration:underline;
+  .headings {
+    text-decoration: underline;
+  }
+  /*Below here are the things I changed*/
+  
+  .nav ul {
+    list-style: none;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .nav li {
+    text-align: left;
+  }
+  
+  .nav a {
+    text-decoration: none;
+    display: block;
+    padding-left: 15px;
+    padding-right: 5px;
+    border: 2px solid rgb(118, 104, 198);
+    z-index: 8;
+    background-color: rgb(165, 150, 245);
+    display: inline block;
+    position: relative;
+  }
+  
+  .nav a:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  
+  .dropdown {
+    visibility: hidden;
+  }
+  
+  #main12:hover + .dropdown {
+    visibility: visible;
+  }
+  
+  .dropdown:hover {
+    visibility: visible;
+  }
+  
+  #main12 {
+    text-decoration: none;
+    padding-right: 5px;
+    border: 2px solid rgb(118, 104, 198);
+    z-index: 8;
+    background-color: rgb(165, 150, 245);
+    display: inline-block;
+    /*position:absolute;*/
+    /*left:46.2%;*/
+    /*top:2.35%;*/
+  }
+  
+  #main {
+    text-decoration: none;
+    border: 2px solid rgb(118, 104, 198);
+    z-index: 8;
+    background-color: rgb(165, 150, 245);
+    display: inline-block;
+    position: absolute;
+    left: 53.5%;
+    top: 5.47%;
+  }
+  
+  #main12:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  
+  #welcome-page {
+    display: inline;
+    position: relative;
+  }
+  
+  #this-class {
+    display: inline;
+    position: relative;
+  }
+  
+  #html-css {
+    display: inline;
+    position: relative;
+  }
+  
+  #this-class {
+    display: inline;
+    position: relative;
+  }
+  
+  #c-hardware {
+    display: inline;
+    position: relative;
+  }
+  
+  .hrefs {
+    text-decoration: none;
+    padding-right: 5px;
+    border: 2px solid rgb(118, 104, 198);
+    z-index: 8;
+    background-color: rgb(165, 150, 245);
+  }
+  
+  .hrefs:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  
+  body {
+    background-image: url("background.png");
   }
 </style>
 
-<body style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4hmSddns9L7IdXTn8DloSkSo8QQ-1qSniMr700LLdfoWtZ-pk');">
+<body>
   <div class="navbar">
     <div>
-        <ul>
+      <ul>
 
-            <li id="welcome-page"><a class="hrefs" href="index.html">Welcome Page</a></li>
-            <li id="this-class"><a class="hrefs" href="aboutme.html">About Me</a></li>
-            <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
-            <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
-            <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
+        <li id="welcome-page"><a class="hrefs" href="index.html">Welcome Page</a></li>
+        <li id="this-class"><a class="hrefs" href="aboutme.html">About Me</a></li>
+        <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
+        <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
+        <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
+        <li id="c-hardware"><a class="hrefs" href="vindWebsite.html"> Vindinium</a></li>
+        <li id="c-hardware"><a class="hrefs" href="game.html"> Game</a></li>
 
-            <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
-            <ul class="dropdown" id="main">
-                <li><a href="info.html">Popular Music Artists</a></li>
-                <li><a href="calc.html">Calculator</a></li>
-                <li><a href="todolist.html">To Do List</a></li>
-                <li><a href = "planner.html"> Planner </a></li>
-                <li><a href = "contentTracker.html"> Content Tracker</a></li>
-                
-            </ul>
+        <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
+        <ul class="dropdown" id="main">
+          <li><a href="info.html">Popular Music Artists</a></li>
+          <li><a href="calc.html">Calculator</a></li>
+          <li><a href="todolist.html">To Do List</a></li>
+          <li><a href="planner.html"> Planner </a></li>
+          <li><a href="contentTracker.html"> Content Tracker</a></li>
 
         </ul>
 
-    </div>
-  <header>
-    <h1 class="title movee">Planner</h1>
-  </header>
-  <section>
-    <form id="myform" class="movee">
-      <div id="diff">
-        <div class="position movee">Add an item to your to do list!
-          <br> Click on an item if you want to remove it.</div>
-        <input class="moveit movee" type="text" id="newitem" />
-         <select id="dropdown2" class="moveit movee">
-    <option value="math">Math</option>
-    <option value="science">Science</option>
-    <option value="history">History</option>
-    <option value="english">English</option>
-    <option value="foreignLang">Foreign Language</option>
-  </select>
-  <select id="dropdown" class="moveit movee">
-          <option value="blue">Blue</option>
-          <option value="red">Red</option>
-          <option value="black">Black</option>
-          <option value="purple">Purple</option>
-          <option value="green">Green</option>
-          <input type="submit" class="moveit movee">
-        </select>
-      </div>
-    </form>
-  </section>
-  <br>
+      </ul>
 
-  </a>
+    </div>
+    <header>
+      <h1 class="title movee">Planner</h1>
+    </header>
+    <section>
+      <form id="myform" class="movee">
+        <div id="diff">
+          <div class="position movee">Add an item to your to do list!
+            <br> Click on an item if you want to remove it.</div>
+          <input class="moveit movee" type="text" id="newitem" />
+          <select id="dropdown2" class="moveit movee">
+            <option value="math">Math</option>
+            <option value="science">Science</option>
+            <option value="history">History</option>
+            <option value="english">English</option>
+            <option value="foreignLang">Foreign Language</option>
+          </select>
+          <select id="dropdown" class="moveit movee">
+            <option value="blue">Blue</option>
+            <option value="red">Red</option>
+            <option value="black">Black</option>
+            <option value="purple">Purple</option>
+            <option value="green">Green</option>
+            <input type="submit" class="moveit movee">
+          </select>
+        </div>
+      </form>
+    </section>
+    <br>
+
+    </a>
   </div>
   </form>
   </section>
   <br>
-<div class = "sections" id = "mathSection"> <h2 class = "headings" id = "mathHeading"> Math </h2> <p> </p> </div>
+  <div class="sections" id="mathSection">
+    <h2 class="headings" id="mathHeading"> Math </h2>
+    <p> </p>
+  </div>
 
-<div class="sections" id="scienceSection"> <h2 class = "headings" id="scienceHeading">Science</h2> </div> 
+  <div class="sections" id="scienceSection">
+    <h2 class="headings" id="scienceHeading">Science</h2> </div>
 
-<div class="sections" id="historySection"><h2 class = "headings" id="historyHeading">History</h2></div>
-  
-<div class="sections" id="englishSection"><h2 class = "headings" id="englishHeading">English</h2></div>  
-  
-<div class="sections" id="foreignLanguageSection"><h2 class = "headings" id="foreignLanguageHeading">Foreign Language</h2></div>  
- 
- 
-<div id="planner"></div>
+  <div class="sections" id="historySection">
+    <h2 class="headings" id="historyHeading">History</h2></div>
+
+  <div class="sections" id="englishSection">
+    <h2 class="headings" id="englishHeading">English</h2></div>
+
+  <div class="sections" id="foreignLanguageSection">
+    <h2 class="headings" id="foreignLanguageHeading">Foreign Language</h2></div>
+
+
+  <div id="planner"></div>
 
   <script src="planner.js"></script>
 </body>
