--- a/1st Website/todolist.html
+++ b/1st Website/todolist.html
@@ -15,14 +15,16 @@
       <li id="c-hardware"><a class="hrefs" href="this-class.html"> This Class</a></li>
       <li id="html-css"><a class="hrefs" href="html-css.html">HTML&CSS</a></li>
       <li id="c-hardware"><a class="hrefs" href="Computer-Hardware.html"> Computer Hardware</a></li>
+      <li id="c-hardware"><a class="hrefs" href="vindWebsite.html"> Vindinium</a></li>
+      <li id="c-hardware"><a class="hrefs" href="game.html"> Game</a></li>
 
       <li id="main12" style="display:inline-block"><a class="hrefs">Remixes</a></li>
       <ul class="dropdown" id="main">
         <li><a href="info.html">Popular Music Artists</a></li>
         <li><a href="calc.html">Calculator</a></li>
         <li><a href="todolist.html">To Do List</a></li>
-        <li><a href = "planner.html"> Planner </a></li>
-        <li><a href = "contentTracker.html"> Content Tracker</a></li>
+        <li><a href="planner.html"> Planner </a></li>
+        <li><a href="contentTracker.html"> Content Tracker</a></li>
       </ul>
 
     </ul>
